@@ -25,12 +25,16 @@ GNU/Linux
 
 .. class:: MSS
 
-    .. method:: __init__([display=None])
+    .. method:: __init__([display=None, with_cursor=False])
 
         :type display: str or None
         :param display: The display to use.
+        :param with_cursor: Include the mouse cursor in screenshots.
 
         GNU/Linux initializations.
+
+            .. versionadded:: 8.0.0
+                `with_cursor` keyword argument.
 
     .. method:: grab(monitor)
 
@@ -75,6 +79,12 @@ Methods
 .. class:: MSSBase
 
     The parent's class for every OS implementation.
+
+    .. attribute:: compression_level
+
+        PNG compression level used when saving the screenshot data into a file (see :py:func:`zlib.compress()` for details).
+
+        .. versionadded:: 3.2.0
 
     .. method:: close()
 
